--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "element-ui": "2.13.0",
+    "element-ui": "^2.13.2",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -43,6 +43,7 @@
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "^1.0.4",
     "mockjs": "1.0.1-beta3",
     "runjs": "^4.3.2",
     "sass": "^1.26.8",
