--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = '/api/v1'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
@@ -12,3 +12,11 @@ VUE_APP_BASE_API = '/dev-api'
 # Detail:  https://github.com/vuejs/vue-cli/blob/dev/packages/@vue/babel-preset-app/index.js
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+
+#开发环境跨域设置项
+#VUE_APP_CROSS_DOMAIN 为true时 VUE_APP_PROXY_API有效
+#VUE_APP_PROXY_API在vue.config配置devServer项
+#该配置项仅支持跨一个域，不支持同一项目跨多个域，跨多个域请在api中重置baseUrl
+VUE_APP_CROSS_DOMAIN = true
+VUE_APP_PROXY_API = '/api'
