--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
     "js-cookie": "2.2.0",
+    "leaflet": "^1.6.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-i18n": "^8.18.2",
     "vue-router": "3.0.6",
+    "vue2-leaflet": "^2.5.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
